--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,1 +1,7 @@
 <h1>About</h1>
+
+<p>
+    Welcome to the about page. As you can see with express-ejs-layouts you can use different layouts for different sections of your websites.
+    <br />
+    Go back to the <a href="/">&larrb; Homepage</a>.
+</p>
