--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,5 @@
 <h1>Hello</h1>
+
+<p>
+    This is the homepage, check out the <a href="/about">about</a> page to see the sidebar layout in action.
+</p>
