--- a/views/layouts/sidebar.ejs
+++ b/views/layouts/sidebar.ejs
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en-za">
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EJS Sidebar Layout</title>
-</head>
-<body>
-    <%- body %>
-</body>
+    <link rel="stylesheet" href="css/main.css" />
+    <title><%- title %> - EJS Layouts and partials</title>
+  </head>
+  <body>
+    <div class="wrapper">
+        <%- include("../partials/header.ejs") %>
+
+      <aside>
+        <h4>Sidebar</h4>
+      </aside>
+
+      <main><%- body %></main>
+
+      <%- include("../partials/footer.ejs") %></aside>
+    </div>
+  </body>
 </html>
